# Listency

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  MVP_PLAN.md  Makefile  README.md  package.json  readme_cn.md  readme_ja.md
app/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
app/backend/tests/: test_agents.py  test_analytics.py  test_business_hours.py  test_calendar_availability_routes.py  test_database_filters.py  test_diagnostics.py  test_env_store.py  test_evaluations.py  test_gemini_live.py  test_log_maintenance.py  test_openai_realtime.py  test_phone_manager.py  test_session_manager.py  test_telnyx_adapter.py  test_telnyx_stream.py  test_tools.py  test_tunnel_manager.py  test_twilio_adapter.py  test_twilio_stream.py  test_voice_preview.py
app/backend/voice_agent/: __init__.py  __main__.py  analytics.py  evaluations.py  main.py
app/backend/voice_agent/calendar/: __init__.py  base.py  manual.py
app/backend/voice_agent/config/: env_store.py  paths.py
app/backend/voice_agent/core/: business_hours.py  remediation.py  session_manager.py  state.py  voice_preview.py
app/backend/voice_agent/phone/: __init__.py  base.py  codecs.py  manager.py  telnyx.py  telnyx_stream.py  twilio.py  twilio_stream.py
app/backend/voice_agent/providers/: __init__.py  base.py  gemini_live.py  openai_realtime.py
app/backend/voice_agent/storage/: database.py
app/backend/voice_agent/tools/: __init__.py  builtins.py  registry.py
app/backend/voice_agent/tunnel/: __init__.py  manager.py
app/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/desktop/src-tauri/binaries/: README.md
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/icons/: icon.icns
app/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ALPHA_TESTING.md  DEVELOPMENT.md  PHONE_SETUP.md  RELEASE.md
scripts/: dev_app.mjs  (+15 more)
(+136 files in other folders)
