[project]
name = "voice-agent-backend"
version = "0.1.0"
description = "Local backend for the voiceAgent desktop app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=16.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
