[project]
name = "listency-backend"
version = "0.3.0"
description = "Local backend for the Listency desktop app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=16.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["voice_agent"]

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_covered = true
