[package]
name = "listency-desktop"
version = "0.1.0"
description = "Local Listency desktop app"
authors = ["Listency contributors"]
edition = "2021"

[lib]
name = "listency_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
